src/python/fastapi/api/create/create/create_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1-create
  namespace: api
spec:
  selector:
    matchLabels:
      app: v1-create
  replicas: 1
  template:
    metadata:
      labels:
        app: v1-create-user
    spec:
      containers:
      - name: v1-create
        image: arieltar/api-v1-create
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
