src/python/fastapi/api/create/create/create_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v1-create-svc
  namespace: api
spec:
  selector:
    app: v1-create
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
