src/python/fastapi/api/create/create/create_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-create-ing
  namespace: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /v1/create/
        pathType: Exact
        backend:
          service:
            name: api-v1-create-svc
            port:
              number: 8000
